--- a/reporting/web/Views/DataSources/CreateDataSource/Index.cshtml
+++ b/reporting/web/Views/DataSources/CreateDataSource/Index.cshtml
@@ -36,7 +36,7 @@
         <environment exclude="Development,CloudDevelopment">
             <link rel="stylesheet" asp-append-version="true" href="@reportServerResourceUrl/cdn/css/essentialjs/ej2-base.css" />
             <link rel="stylesheet" asp-append-version="true" href="@reportServerResourceUrl/cdn/css/essentialjs/ej2-notifications.css" />
-        </environment>      
+        </environment>
         <environment include="Development,CloudDevelopment">
             <link rel="stylesheet" asp-append-version="true" href="@reportServerResourceUrl/cdn/css/create-datasource.css" />
         </environment>
@@ -68,8 +68,9 @@
     }
     <script>
         let isAzureApplication = @Json.Serialize(@ViewBag.isAzureApplication);
+        let isSelfHosted = @Json.Serialize(ServerAppConfig.IsSelfHosted);
         let datasource = "@Url.Action("DataSources", "DataSources")";
-        var dataConnectorPath = @Json.Serialize(ServerAppConfig.IsSelfHosted) ? "@reportServerResourceUrl" + "/cdn/scripts/datasource/dataconnectors.json" : "https://cdn.boldreports.com/static/essentialjs/scripts/datasources/dataconnectors.json";
+        var dataConnectorPath = isSelfHosted ? "@reportServerResourceUrl" + "/cdn/scripts/datasource/dataconnectors.json" : "https://cdn.boldreports.com/static/essentialjs/scripts/datasources/dataconnectors.json";
     </script>
 </head>
 <body class="cd" ng-app="createDataSourceApp">
