--- a/reporting/web/Views/Designer/ReportDesigner.cshtml
+++ b/reporting/web/Views/Designer/ReportDesigner.cshtml
@@ -15,6 +15,7 @@
     var tourCookie = Context.Request.Cookies["syncfusion.reports.designer.tour"];
     var tourObj = new TourCookie();
     var isSelfHosted = ServerAppConfig.IsSelfHosted;
+    var isAzureApplication = ServerAppConfig.IsAzureApplication;
     var reportUrl = Url.Action("Reports", "Reports");
     var rootUrlAction = reportUrl.TrimEnd('/').Remove(reportUrl.LastIndexOf('/'));
     if (tourCookie != null)
@@ -461,7 +462,7 @@
                 reportItemExtensions: window.itemExtensions,
                 queryDesignerAction: disableDesignerHeaderPane,
                 mapShapData: window.ShapData,
-                isAzureApp: (!@isSelfHosted.ToString().ToLower()),
+                isAzureApp: (@isAzureApplication.ToString().ToLower()),
                 customBrandSettings: {
                     hideHelpLink: isHideHelpLink,
                     customDomain: customDomain,
