--- a/reporting/web/Views/Shared/_ScheduleRecipients.cshtml
+++ b/reporting/web/Views/Shared/_ScheduleRecipients.cshtml
@@ -2,6 +2,7 @@
     Layout = null;
     var path = "/Export";
     var isAzureApplication = ServerAppConfig.IsAzureApplication;
+    var isSelfHosted = ServerAppConfig.IsSelfHosted;
     var helpSiteUrl = GlobalAppSettings.GetHelpSiteUrl(HelpSiteUrlNames.ReportExportScheduleFailure);
  }
 <!DOCTYPE html>
@@ -53,16 +54,16 @@
                 </div>
             </div>
         </div>
-        <div class="col-sm-12 col-xs-12 send-mail-align">
-            <div id="enable-mail-attachment" class="col-sm-6 col-xs-6 no-padding no-margin">
-                @Html.CheckBox("enable-send-mail", true, new { @class = "material-checkbox  enable-sendmail-checkbox" })
-                @Html.Label("enable-send-mail", "[[[Email attachment]]]", new { @class = "clspadleft app-checkbox-label normal-font sendmail-label" })
-            </div>
-            <div class="col-sm-6 col-xs-6" id="checkbox-validation" style="visibility: hidden">[[[Please select at least one option to schedule a report ]]]</div>
-        </div>
-
         @if (ServerAppConfig.IsSelfHosted && !isAzureApplication)
         {
+            <div class="col-sm-12 col-xs-12 send-mail-align">
+                <div id="enable-mail-attachment" class="col-sm-6 col-xs-6 no-padding no-margin">
+                    @Html.CheckBox("enable-send-mail", true, new { @class = "material-checkbox  enable-sendmail-checkbox" })
+                    @Html.Label("enable-send-mail", "[[[Email attachment]]]", new { @class = "clspadleft app-checkbox-label normal-font sendmail-label" })
+                </div>
+                <div class="col-sm-6 col-xs-6" id="checkbox-validation" style="visibility: hidden">[[[Please select at least one option to schedule a report ]]]</div>
+            </div>
+
             <div class="col-sm-12 col-xs-12 enable-save-block">
                 <div id="enable-save-as-file" class="col-sm-2 col-xs-2 no-padding no-margin">
                     @Html.CheckBox("save-as-file", false, new { @class = "material-checkbox  enable-savefile-checkbox" })
@@ -133,7 +134,7 @@
                 <div class="col-sm-3 col-xs-3 selected-recipients" id="selected-users"></div>
             </div>
         </div>
-		<div id="selected-users-validation">[[[Select a user, group, or type an email address in the external recipient to schedule]]]</div>
+        <div id="selected-users-validation">[[[Select a user, group, or type an email address in the external recipient to schedule]]]</div>
         <div id="selected-users-info" class="col-sm-5 col-xs-5 no-margin i-search-fields"></div>
         <div id="failure-notification" class="col-sm-12 col-xs-12  no-margin">
             <div id="enable-checkbox">
@@ -160,4 +161,6 @@
            var getActiveandInactiveUserUrl = "@Url.Action("getallactivegroupsandusers", "accounts")";
            var updateScheduleUrl = "@Url.Action("UpdateSchedule", "scheduler")";
            var addScheduleUrl = "@Url.Action("AddSchedule", "scheduler")";
+           var isAzureApplication = "@isAzureApplication";
+           var isSelfHosted = "@isSelfHosted";
 </script>
