modified the changes

--- a/reporting/web/Views/Reports/TileReports.cshtml
+++ b/reporting/web/Views/Reports/TileReports.cshtml
@@ -326,7 +326,7 @@
                         <div class="dashboard-sort-container ng-hide" ng-show="!showSearch && !isTablet">
                             <div id="dashboard-bulk-action-dropdown" class="dashboard-filter-sort dropdown text-right no-padding">
                                 <select id="report-bulk-action" class="selectpicker no-padding" title="[[[Bulk Actions]]]">
-                                    <option data-hidden="true">[[[Bulk Actions]]]</option>
+                                    <option value="bulk_action" data-hidden="true">[[[Bulk Actions]]]</option>
                                     <option value="Copy to categories">[[[Copy to categories]]]</option>
                                     <option value="Copy to tenant">[[[Copy to another tenant]]]</option>
                                 </select>
